# first-test

./: README.md  pyproject.toml  report.md
src/first_test/: crew.py  main.py
src/first_test/config/: agents.yaml  tasks.yaml
