[project]
name = "first_test"
version = "0.1.0"
description = "first-test using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1"
]

[project.scripts]
first_test = "first_test.main:run"
run_crew = "first_test.main:run"
train = "first_test.main:train"
replay = "first_test.main:replay"
test = "first_test.main:test"
run_with_trigger = "first_test.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
